test-package-compiler/tests/snapshots/compiler_tests__stdlib_class_tuple_parser.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
AST:
Module {
    classes: [
        ClassDefinition {
            name: Identifier {
                name: "Tuple",
                span: Span {
                    start: 264,
                    end: 269,
                },
            },
            superclass: Some(
                Identifier {
                    name: "Object",
                    span: Span {
                        start: 247,
                        end: 253,
                    },
                },
            ),
            superclass_package: None,
            class_kind: Object,
            is_abstract: false,
            is_sealed: true,
            is_typed: false,
            is_internal: false,
            supervisor_kind: None,
            state: [],
            methods: [
                MethodDefinition {
                    selector: Unary(
                        "size",
                    ),
                    parameters: [],
                    body: [
                        ExpressionStatement {
                            comments: CommentAttachment {
                                leading: [],
                                trailing: None,
                            },
                            expression: Primitive {
                                name: "size",
                                is_quoted: true,
                                is_intrinsic: false,
                                is_inferred: false,
                                span: Span {
                                    start: 302,
                                    end: 319,
                                },
                            },
                            preceding_blank_line: false,
                        },
                    ],
                    return_type: None,
                    is_sealed: false,
                    is_internal: false,
                    is_class_method: false,
                    kind: Primary,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [
                            Comment {
                                content: "Size and access",
                                span: Span {
                                    start: 294,
                                    end: 298,
                                },
                                kind: Line,
                                preceding_blank_line: true,
                            },
                        ],
                        trailing: None,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 294,
                        end: 319,
                    },
                },
                MethodDefinition {
                    selector: Keyword(
                        [
                            KeywordPart {
                                keyword: "at:",
                                span: Span {
                                    start: 323,
                                    end: 326,
                                },
                            },
                        ],
                    ),
                    parameters: [
                        ParameterDefinition {
                            name: Identifier {
                                name: "index",
                                span: Span {
                                    start: 327,
                                    end: 332,
                                },
                            },
                            type_annotation: None,
                        },
                    ],
                    body: [
                        ExpressionStatement {
                            comments: CommentAttachment {
                                leading: [],
                                trailing: None,
                            },
                            expression: Primitive {
                                name: "at:",
                                is_quoted: true,
                                is_intrinsic: false,
                                is_inferred: false,
                                span: Span {
                                    start: 336,
                                    end: 352,
                                },
                            },
                            preceding_blank_line: false,
                        },
                    ],
                    return_type: None,
                    is_sealed: false,
                    is_internal: false,
                    is_class_method: false,
                    kind: Primary,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [],
                        trailing: None,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 323,
                        end: 352,
                    },
                },
                MethodDefinition {
                    selector: Unary(
                        "isOk",
                    ),
                    parameters: [],
                    body: [
                        ExpressionStatement {
                            comments: CommentAttachment {
                                leading: [],
                                trailing: None,
                            },
                            expression: Primitive {
                                name: "isOk",
                                is_quoted: true,
                                is_intrinsic: false,
                                is_inferred: false,
                                span: Span {
                                    start: 410,
                                    end: 427,
                                },
                            },
                            preceding_blank_line: false,
                        },
                    ],
                    return_type: None,
                    is_sealed: false,
                    is_internal: false,
                    is_class_method: false,
                    kind: Primary,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [
                            Comment {
                                content: "Pattern matching for Erlang result types",
                                span: Span {
                                    start: 402,
                                    end: 406,
                                },
                                kind: Line,
                                preceding_blank_line: true,
                            },
                        ],
                        trailing: None,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 402,
                        end: 427,
                    },
                },
                MethodDefinition {
                    selector: Unary(
                        "isError",
                    ),
                    parameters: [],
                    body: [
                        ExpressionStatement {
                            comments: CommentAttachment {
                                leading: [],
                                trailing: None,
                            },
                            expression: Primitive {
                                name: "isError",
                                is_quoted: true,
                                is_intrinsic: false,
                                is_inferred: false,
                                span: Span {
                                    start: 442,
                                    end: 462,
                                },
                            },
                            preceding_blank_line: false,
                        },
                    ],
                    return_type: None,
                    is_sealed: false,
                    is_internal: false,
                    is_class_method: false,
                    kind: Primary,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [],
                        trailing: None,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 431,
                        end: 462,
                    },
                },
                MethodDefinition {
                    selector: Unary(
                        "unwrap",
                    ),
                    parameters: [],
                    body: [
                        ExpressionStatement {
                            comments: CommentAttachment {
                                leading: [],
                                trailing: None,
                            },
                            expression: Primitive {
                                name: "unwrap",
                                is_quoted: true,
                                is_intrinsic: false,
                                is_inferred: false,
                                span: Span {
                                    start: 492,
                                    end: 511,
                                },
                            },
                            preceding_blank_line: false,
                        },
                    ],
                    return_type: None,
                    is_sealed: false,
                    is_internal: false,
                    is_class_method: false,
                    kind: Primary,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [
                            Comment {
                                content: "Unwrapping",
                                span: Span {
                                    start: 482,
                                    end: 488,
                                },
                                kind: Line,
                                preceding_blank_line: true,
                            },
                        ],
                        trailing: None,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 482,
                        end: 511,
                    },
                },
                MethodDefinition {
                    selector: Keyword(
                        [
                            KeywordPart {
                                keyword: "unwrapOr:",
                                span: Span {
                                    start: 515,
                                    end: 524,
                                },
                            },
                        ],
                    ),
                    parameters: [
                        ParameterDefinition {
                            name: Identifier {
                                name: "default",
                                span: Span {
                                    start: 525,
                                    end: 532,
                                },
                            },
                            type_annotation: None,
                        },
                    ],
                    body: [
                        ExpressionStatement {
                            comments: CommentAttachment {
                                leading: [],
                                trailing: None,
                            },
                            expression: Primitive {
                                name: "unwrapOr:",
                                is_quoted: true,
                                is_intrinsic: false,
                                is_inferred: false,
                                span: Span {
                                    start: 536,
                                    end: 558,
                                },
                            },
                            preceding_blank_line: false,
                        },
                    ],
                    return_type: None,
                    is_sealed: false,
                    is_internal: false,
                    is_class_method: false,
                    kind: Primary,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [],
                        trailing: None,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 515,
                        end: 558,
                    },
                },
                MethodDefinition {
                    selector: Keyword(
                        [
                            KeywordPart {
                                keyword: "unwrapOrElse:",
                                span: Span {
                                    start: 562,
                                    end: 575,
                                },
                            },
                        ],
                    ),
                    parameters: [
                        ParameterDefinition {
                            name: Identifier {
                                name: "block",
                                span: Span {
                                    start: 576,
                                    end: 581,
                                },
                            },
                            type_annotation: None,
                        },
                    ],
                    body: [
                        ExpressionStatement {
                            comments: CommentAttachment {
                                leading: [],
                                trailing: None,
                            },
                            expression: Primitive {
                                name: "unwrapOrElse:",
                                is_quoted: true,
                                is_intrinsic: false,
                                is_inferred: false,
                                span: Span {
                                    start: 585,
                                    end: 611,
                                },
                            },
                            preceding_blank_line: false,
                        },
                    ],
                    return_type: None,
                    is_sealed: false,
                    is_internal: false,
                    is_class_method: false,
                    kind: Primary,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [],
                        trailing: None,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 562,
                        end: 611,
                    },
                },
                MethodDefinition {
                    selector: Unary(
                        "asString",
                    ),
                    parameters: [],
                    body: [
                        ExpressionStatement {
                            comments: CommentAttachment {
                                leading: [],
                                trailing: None,
                            },
                            expression: Primitive {
                                name: "asString",
                                is_quoted: true,
                                is_intrinsic: false,
                                is_inferred: false,
                                span: Span {
                                    start: 643,
                                    end: 664,
                                },
                            },
                            preceding_blank_line: false,
                        },
                    ],
                    return_type: None,
                    is_sealed: false,
                    is_internal: false,
                    is_class_method: false,
                    kind: Primary,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [
                            Comment {
                                content: "Conversion",
                                span: Span {
                                    start: 631,
                                    end: 639,
                                },
                                kind: Line,
                                preceding_blank_line: true,
                            },
                        ],
                        trailing: None,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 631,
                        end: 664,
                    },
                },
            ],
            class_methods: [],
            class_variables: [],
            comments: CommentAttachment {
                leading: [
                    Comment {
                        content: "Copyright 2026 James Casey",
                        span: Span {
                            start: 240,
                            end: 246,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "SPDX-License-Identifier: Apache-2.0",
                        span: Span {
                            start: 240,
                            end: 246,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "Test Tuple class compilation as a value type (not gen_server).",
                        span: Span {
                            start: 240,
                            end: 246,
                        },
                        kind: Line,
                        preceding_blank_line: true,
                    },
                    Comment {
                        content: "Tuple is a sealed Object subclass backed by Erlang tuples.",
                        span: Span {
                            start: 240,
                            end: 246,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "new/0 should return {} (empty tuple).",
                        span: Span {
                            start: 240,
                            end: 246,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                ],
                trailing: None,
            },
            doc_comment: None,
            backing_module: None,
            handle_scope: None,
            type_params: [],
            superclass_type_args: [],
            span: Span {
                start: 240,
                end: 664,
            },
        },
    ],
    method_definitions: [],
    protocols: [],
    expressions: [],
    span: Span {
        start: 240,
        end: 664,
    },
    file_leading_comments: [],
    file_trailing_comments: [],
}
